@@ -2689,3 +2689,10 @@ Fri Oct  1 16:19:08 PDT 1999
 (Raster)
 
 commit updated TODO
+
+-------------------------------------------------------------------------------
+
+Fri Oct  1 17:01:44 PDT 1999
+(Mandrake)
+
+let us place dialog boxes arranged like the rest of the windows in the world
